--- a/Codigo/Interface/com.mycompany_Churrasco/pom.xml
+++ b/Codigo/Interface/com.mycompany_Churrasco/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.mycompany.steamverde.SteamVerde</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+    </dependencies>
 </project>
